# freeswitch-push

./: Makefile.am  Readme.md  mod_notify.c  mod_notify_push.c
scripts/: mobile_push.lua
